--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "deploy": "gh-pages -d dist"
   },
   "keywords": [],
-  "author": "",
+  "author": "IgYel",
   "license": "ISC",
   "description": "",
   "dependencies": {
